# Ongine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt  imgui.ini
Editor/res/sysshaders/: vs.shader
Editor/src/: EditorApp.cpp  EditorLayer.h
Ongine/: CMakeLists.txt
Ongine/Ongine.dir/RelWithDebInfo/Ongine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Ongine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Ongine/src/: Ongine.h
Ongine/src/Ongine/: Application.h  AssetManager.cpp  AssetManager.h  Base.h  Buffer.h  Camera.cpp  Camera.h  Core.h  ECS.cpp  ECS.h  Entrypoint.h  GLErr.cpp  GLErr.h  Input.cpp  Input.h  Instumentor.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Shader.h  Sprite.cpp  Sprite.h  Texture.h  Transform.cpp  Transform.h  VertexArray.h  onpch.cpp  onpch.h
Sandbox/: CMakeLists.txt  cpp.hint  imgui.ini
Sandbox/Sandbox.dir/RelWithDebInfo/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sandbox/res/sysshaders/: fs.shader  vs.shader
Sandbox/src/: SandboxApp.cpp  SandboxLayer.h
lib/RelWithDebInfo/: Ongine.exp
